<resources>
    <string name="app_name">BB Kiel</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_favourites">Favourites</string>

    <string name="my_projects">Meine Projekte</string>
    <string name="my_subprojects">Meine Teilprojekte</string>
    <string name="title_project">Project</string>
    <string name="example_text">Hier könnte Ihre Information stehen. Wuhu!</string>
    <string name="title_subproject">SubProject</string>
    <string name="ranking_text">Gebe hier die Bewertung für das Projekt ab.</string>
    <string name="platzhalter">666</string>
    <string name="userXYZ">user12345</string>
    <string name="placeholder">placeholder</string>
    <string name="example_text_comment">Das hier ist ein Beispiel Kommentar. So könnte Ihr Kommentar später aussehen :D!</string>
    <string name="district">24118</string>
    <string name="period">geplanter Zeitraum:</string>
    <string name="map">Map Ansicht</string>
    <string name="districts">Distrikt Ansicht</string>
    <string name="projects_near_by">Projekte in deiner Nähe</string>
    <string name="my_user">User Name</string>
    <string name="design">Design</string>
    <string name="language">Sprache</string>
    <string name="information">Über das Projekt:</string>
    <string name="phase">Aktuelle Phase:</string>
    <string name="organisation">Organisation:</string>
    <string name="location">Location:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>