<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        tools:context=".ui.project.SubProjectFragment" >

        <androidx.cardview.widget.CardView
            android:id="@+id/information_subproject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/picture_subproject"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/placeholder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/bbk_logo" />



                <!--                Planned Period                  -->
                <TextView
                    android:id="@+id/planned_period_sub"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/period"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.043"
                    app:layout_constraintStart_toEndOf="@id/picture_subproject"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <TextView
                    android:id="@+id/createdAt"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/placeholder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.034"
                    app:layout_constraintStart_toEndOf="@id/planned_period_sub"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <!--                Organisation                -->
                <TextView
                    android:id="@+id/organisation"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organisation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.035"
                    app:layout_constraintStart_toEndOf="@id/picture_subproject"
                    app:layout_constraintTop_toBottomOf="@id/planned_period_sub">

                </TextView>

                <TextView
                    android:id="@+id/organisation_placeholder"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/placeholder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.035"
                    app:layout_constraintStart_toEndOf="@id/organisation"
                    app:layout_constraintTop_toBottomOf="@id/planned_period_sub">

                </TextView>

                <!--                Location                -->
                <TextView
                    android:id="@+id/location"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.035"
                    app:layout_constraintStart_toEndOf="@id/picture_subproject"
                    app:layout_constraintTop_toBottomOf="@id/organisation">

                </TextView>

                <TextView
                    android:id="@+id/location_placeholder"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/placeholder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.035"
                    app:layout_constraintStart_toEndOf="@id/location"
                    app:layout_constraintTop_toBottomOf="@id/organisation">

                </TextView>

                <!--                Project Description                 -->
                <TextView
                    android:id="@+id/information_text_subproject"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/information"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/picture_subproject"
                    app:layout_constraintVertical_bias="0.103">

                </TextView>

                <TextView
                    android:id="@+id/description_TextView"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/placeholder"
                    android:text="@string/example_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/information_text_subproject">

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/information_subproject"
            app:layout_constraintTop_toBottomOf="@+id/information_subproject">



            <org.osmdroid.views.MapView android:id="@+id/map"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />




        </androidx.cardview.widget.CardView>

        <include
            android:id="@+id/include"
            layout="@layout/like_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <include
            android:id="@+id/include_comment_cardview"
            layout="@layout/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>